2005-08-11 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b2

	* Fix: Even if clickcount display is off for an album 
	       an admin should see the click counts in stats.

	Thanks to Lucent.

2005-08-10 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b1

	%!@# ZLORFIX ! i shouldnt touch RC code.

	* Fix: Minimum width change broke ecard with pictures >= 200px width.

2005-08-09  Chris Kelly <ckdake@users.sf.net> 1.5.1-RC2

	* Release: 1.5.1-RC2

2005-08-09 Jens Tkotz <jens@peino.de> 1.5.1-RC2-cvs-b15

	* Fix: Ecard stamp preview failed in IE, due to space in title of popup.
	  Thanks to Dariush Molavi.

	* Change: Added minimum width of ecard.

	* Change: used tidy on ecard template.

	* Change: increased needed Debuglevel when got successfully dimensions of an image.

2005-08-07 Jens Tkotz <jens@peino.de> 1.5.1-RC2-cvs-b14

	* Fix: Added urlprefix via referer to embedded urls, so we get complete urls in mails.

	* Fix: Possible security hole in postnuke by overriding global $name
	  Thanks to msandersen

	* Change: Format in nls.php

	* Change: Make urls in comments mail a link.

	* Fix: updated list of translateable core files.

	* Fix: Added isset() around test for optional bins in setup to avoid warnings.

	* Change: Some language related things.

2005-08-07 Jens Tkotz <jens@peino.de> 1.5.1-RC2-cvs-b13

	* Fix: Deleting comments via overview when embedded.

2005-08-07 Jens Tkotz <jens@peino.de> 1.5.1-RC2-cvs-b12

	* Change: Postnuke related adaptions for new Versions.
		  - urls
		  - user / userdb
		  - language
		  - stylesheets in wrapper.header
	  Thanks to msandersen

	* Change: Little more info in footer in Debugmode.	

	* Fix: Ecard preview when embedded.
	
	* Fix: Stamp preview when embedded.

2005-08-06 Jens Tkotz <jens@peino.de> 1.5.1-RC2-cvs-b11

	* Fix: Check for NetPBM and ImageMagick was not fully correct.

	* Fix: Separator for PATH var under windows is ; not :

	* Fix: Added message for partially found ImageMagick.
