@@ -1,3 +1,8 @@
+2005-08-12 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b3
+
+	* Fix: Added path to folder to the url when Gallery is embedded in *Nuke,
+	       but not in the document root.
+
 2005-08-11 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b2
 
 	* Fix: Even if clickcount display is off for an album 
